--- a/DonationManagementClientApp/package.json
+++ b/DonationManagementClientApp/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.1.3",
     "expo": "^50.0.20",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
