--- a/DonationManagementClientApp/package.json
+++ b/DonationManagementClientApp/package.json
@@ -14,6 +14,7 @@
     "@expo/webpack-config": "^19.0.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/bottom-tabs": "^5.11.15",
@@ -25,17 +26,24 @@
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.19.2",
     "formik": "^2.4.6",
+    "paths-js": "^0.4.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^5.0.7",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^7.0.3",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.10",
