--- a/DonationManagementClientApp/package.json
+++ b/DonationManagementClientApp/package.json
@@ -23,27 +23,21 @@
     "axios": "^1.1.3",
     "expo": "^50.0.20",
     "expo-font": "~11.10.3",
-    "expo-image-picker": "~14.7.1",
+    "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.11.1",
-    "express": "^4.19.2",
     "formik": "^2.4.6",
-    "paths-js": "^0.4.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-date-picker": "^5.0.7",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "^7.0.3",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.10",
