--- a/DonationManagementClientApp/package.json
+++ b/DonationManagementClientApp/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/vector-icons": "^14.0.2",
-    "@expo/webpack-config": "^19.0.1",
+    "@expo/webpack-config": "^0.12.52",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/datetimepicker": "^8.2.0",
@@ -21,22 +21,24 @@
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "axios": "^1.1.3",
-    "expo": "^50.0.20",
-    "expo-font": "~11.10.3",
-    "expo-image-picker": "^15.0.7",
+    "donationmanagementclientapp": "file:",
+    "expo-font": "^12.0.10",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
+    "metro": "^0.80.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.75.3",
+    "react-native-config": "^1.5.3",
     "react-native-fontawesome": "^7.0.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^9.2.0",
@@ -44,7 +46,15 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-transform-logical-assignment-operators": "^7.24.7",
+    "@babel/plugin-transform-private-methods": "^7.25.4",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "expo": "^51.0.32",
+    "glob": "^11.0.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
