--- a/DonationManagementClientApp/package.json
+++ b/DonationManagementClientApp/package.json
@@ -14,6 +14,7 @@
     "@expo/webpack-config": "^0.12.52",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native-picker/picker": "^2.7.7",
@@ -26,8 +27,10 @@
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.11.1",
+    "force": "^0.0.3",
     "formik": "^2.4.6",
     "metro": "^0.80.12",
+    "mongoose": "^8.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.75.3",
@@ -41,7 +44,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-sweet-alert": "^3.5.0",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "yup": "^1.4.0"
   },
