--- a/DonationManagementClientApp/package.json
+++ b/DonationManagementClientApp/package.json
@@ -14,24 +14,26 @@
     "@expo/webpack-config": "^0.12.52",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/blur": "^4.4.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "axios": "^1.1.3",
     "donationmanagementclientapp": "file:",
     "expo-font": "^12.0.10",
-    "expo-image-picker": "~14.7.1",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.12.1",
+    "express": "^4.21.1",
     "force": "^0.0.3",
     "formik": "^2.4.6",
     "metro": "^0.80.12",
     "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.75.3",
